2007-01-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.20.2.

2007-01-29  Ross Burton  <ross@burtonini.com>

	* src/matches.c:
	Fix window_workspace (thanks Andrew Yates).

2007-01-12  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.20.1.

2007-01-12  Ross Burton  <ross@burtonini.com>

	* src/parser.c:
	Update to new API so Devil's Pie actually works (thanks Lars!)

2007-01-12  Ross Burton  <ross@burtonini.com>

	* src/sexp-test.c:
	Update to new API so the checks pass.

2007-01-12  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.20.

2007-01-12  Ross Burton  <ross@burtonini.com>

	* src/e-sexp.c:
	* src/parser.[ch]:
	* src/devilspie.c:
	* README:
	Handle multiple expressions in a single file! Yay! Patch from Lars
	Damerow <lars@pixar.com>.

2007-01-08  Ross Burton  <ross@burtonini.com>

	* devilspie.1:
	Update man page (thanks David Decotigny).

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add spawn_sync and spawn_async (thanks David Decotigny).

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add println, str, hex actions, and expand print (thanks David
	Decotigny).

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/matchers.[ch]:
	* src/parser.c:
	Add func_window_xid (thanks David Decotigny)

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/matchers.h:
	Add missing func_window_workspace.

2007-01-08  Ross Burton  <ross@burtonini.com>

	* src/e-sexp.c:
	Use gi18n.h (thanks David Decotigny)

2006-12-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.19.

2006-12-01  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Don't use wnck_window_set_geometry, that doesn't exist in GNOME
	2.14 (#381233)

2006-11-20  Ross Burton  <ross@burtonini.com>

	* src/xutils.[ch]:
	Add my_wnck_get_cardinal().

	* src/matchers.[ch]:
	* src/parser.c: