@@ -768,3 +768,12 @@ ESExpResult *func_spawn_async(ESExp *f, int argc, ESExpResult **argv, Context *c
   
   return e_sexp_result_new_bool (f, spawn_result);
 }
+
+/**
+ * Quit
+ */
+ESExpResult *func_quit(ESExp *f, int argc, ESExpResult **argv, Context *c) {
+  g_main_loop_quit (loop);
+  if (debug) g_printerr(_("Quiting...\n"));
+  return e_sexp_result_new_bool (f, TRUE);
+}
